часткова замна стилю

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -1,34 +1,30 @@
 nav {
-    ul {
-      display: flex;
-      justify-content: space-between;
-      align-items: right;
-      background-color: #1e1e1e;
+    background-color: #1e1e1e;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 110px;
+  }
+  
+  .menu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  
+    .menu-item {
+      padding: 1rem;
       color: #fff;
-      padding: 0.5rem;
-      border-radius: 0.25rem;
+      transition: background-color 0.2s ease-in-out;
   
-      li {
-        margin: 0 0.5rem;
+      &:hover,
+      &.active {
+        background-color: #f6ad55;
+      }
   
-        &:first-child {
-          margin-left: 0;
-        }
-  
-        &:last-child {
-          margin-right: 0;
-        }
-  
-        a {
-          text-decoration: none;
-          color: #fff;
-          font-weight: 500;
-          transition: color 0.2s ease-in-out;
-  
-          &:hover {
-            color: #f6ad55;
-          }
-        }
+      a {
+        color: #fff;
+        text-decoration: none;
       }
     }
   }
